pkgs/dartcv_core/src/imgproc.h

// Draws a circle.
// void cv::circle (InputOutputArray img, Point center, int radius, const Scalar &color, int thickness=1, int lineType=LINE_8, int shift=0)
CvStatus *Circle(Mat img, Point center, int radius, Scalar color, int thickness);
CvStatus *CircleWithParams(
    Mat img, Point center, int radius, Scalar color, int thickness, int lineType, int shift
);
// Clips the line against the image rectangle.
// bool cv::clipLine (Rect imgRect, Point &pt1, Point &pt2)
// bool cv::clipLine (Size imgSize, Point &pt1, Point &pt2)
// bool cv::clipLine (Size2l imgSize, Point2l &pt1, Point2l &pt2)
CvStatus *ClipLine(Rect imgRect, Point pt1, Point pt2, bool *rval);
// Calculates a histogram of a set of arrays.
// void cv::calcHist (const Mat *images, int nimages, const int *channels, InputArray mask, OutputArray hist, int dims, const int *histSize, const float **ranges, bool uniform=true, bool accumulate=false)
// void cv::calcHist (const Mat *images, int nimages, const int *channels, InputArray mask, SparseMat &hist, int dims, const int *histSize, const float **ranges, bool uniform=true, bool accumulate=false)
// void cv::calcHist (InputArrayOfArrays images, const std::vector< int > &channels, InputArray mask, OutputArray hist, const std::vector< int > &histSize, const std::vector< float > &ranges, bool accumulate=false)
CvStatus *
CalcHist(VecMat mats, VecI32 chans, Mat mask, CVD_OUT Mat hist, VecI32 sz, VecF32 rng, bool acc);
// Compares two histograms.
// double cv::compareHist (const SparseMat &H1, const SparseMat &H2, int method)
// double cv::compareHist (InputArray H1, InputArray H2, int method)
CvStatus *CompareHist(Mat hist1, Mat hist2, int method, CVD_OUT double *rval);
// computes the connected components labeled image of boolean image
// int cv::connectedComponents (InputArray image, OutputArray labels, int connectivity, int ltype, int ccltype)
// int cv::connectedComponents (InputArray image, OutputArray labels, int connectivity=8, int ltype=CV_32S)
CvStatus *
ConnectedComponents(Mat src, Mat dst, int connectivity, int ltype, int ccltype, int *rval);
// computes the connected components labeled image of boolean image and also produces a statistics output for each label
// int cv::connectedComponentsWithStats (InputArray image, OutputArray labels, OutputArray stats, OutputArray centroids, int connectivity, int ltype, int ccltype)
// int cv::connectedComponentsWithStats (InputArray image, OutputArray labels, OutputArray stats, OutputArray centroids, int connectivity=8, int ltype=CV_32S)
CvStatus *ConnectedComponentsWithStats(
    Mat src,
    Mat labels,
    Mat stats,
    Mat centroids,
    int connectivity,
    int ltype,
    int ccltype,
    int *rval
);
// Calculates a contour area.
// double cv::contourArea (InputArray contour, bool oriented=false)
CvStatus *ContourArea(VecPoint pts, double *rval);
// Finds the convex hull of a point set.
// void cv::convexHull (InputArray points, OutputArray hull, bool clockwise=false, bool returnPoints=true)
CvStatus *ConvexHull(VecPoint points, CVD_OUT Mat hull, bool clockwise, bool returnPoints);
// SECTION - Feature Detection
// Finds edges in an image using the Canny algorithm [48] .
// void cv::Canny (InputArray dx, InputArray dy, OutputArray edges, double threshold1, double threshold2, bool L2gradient=false)
// void cv::Canny (InputArray image, OutputArray edges, double threshold1, double threshold2, int apertureSize=3, bool L2gradient=false)
CvStatus *Canny(Mat src, Mat edges, double t1, double t2, int apertureSize, bool l2gradient);