packages/dartcv/lib/src/g/imgproc.g.dart


  ffi.Pointer<CvStatus> CalcHist(
    VecMat mats,
    VecI32 chans,
    Mat mask,
    Mat hist,
    VecI32 sz,
    VecF32 rng,
    bool acc,
  ) {
    return _CalcHist(
      mats,
      chans,
      mask,
      hist,
      sz,
      rng,
      acc,
    );
  }

  late final _CalcHistPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecMat, VecI32, Mat, Mat, VecI32, VecF32, ffi.Bool)>>('CalcHist');
  late final _CalcHist = _CalcHistPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecMat, VecI32, Mat, Mat, VecI32, VecF32, bool)>();

  ffi.Pointer<CvStatus> CalcHist_Async(
    VecMat mats,
    VecI32 chans,
    Mat mask,
    VecI32 sz,
    VecF32 rng,
    bool acc,
    imp1.CvCallback_1 callback,
  ) {
    return _CalcHist_Async(
      mats,
      chans,
      mask,
      sz,
      rng,
      acc,
      callback,
    );
  }

  late final _CalcHist_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecMat, VecI32, Mat, VecI32, VecF32,
              ffi.Bool, imp1.CvCallback_1)>>('CalcHist_Async');
  late final _CalcHist_Async = _CalcHist_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecMat, VecI32, Mat, VecI32, VecF32, bool, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Canny(
    Mat src,
    Mat edges,
    double t1,
    double t2,
    int apertureSize,
    bool l2gradient,
  ) {
    return _Canny(
      src,
      edges,
      t1,
      t2,
      apertureSize,
      l2gradient,
    );
  }

  late final _CannyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Double, ffi.Double, ffi.Int, ffi.Bool)>>('Canny');
  late final _Canny = _CannyPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, double, double, int, bool)>();

  ffi.Pointer<CvStatus> Canny_Async(
    Mat src,
    double t1,
    double t2,
    int apertureSize,
    bool l2gradient,
    imp1.CvCallback_1 callback,
  ) {
    return _Canny_Async(
      src,
      t1,
      t2,
      apertureSize,
      l2gradient,
      callback,
    );
  }

  late final _Canny_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Double, ffi.Double, ffi.Int,
              ffi.Bool, imp1.CvCallback_1)>>('Canny_Async');
  late final _Canny_Async = _Canny_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, double, double, int, bool, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Circle(
    Mat img,
    CvPoint center,
    int radius,
    Scalar color,
    int thickness,
  ) {
    return _Circle(
      img,
      center,
      radius,
      color,
      thickness,
    );
  }

  late final _CirclePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, CvPoint, ffi.Int, Scalar, ffi.Int)>>('Circle');
  late final _Circle = _CirclePtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, CvPoint, int, Scalar, int)>();

  ffi.Pointer<CvStatus> CircleWithParams(
    Mat img,
    CvPoint center,
    int radius,
    Scalar color,
    int thickness,
    int lineType,
    int shift,
  ) {
    return _CircleWithParams(
      img,
      center,
      radius,
      color,
      thickness,
      lineType,
      shift,
    );
  }

  late final _CircleWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, CvPoint, ffi.Int, Scalar, ffi.Int,
              ffi.Int, ffi.Int)>>('CircleWithParams');
  late final _CircleWithParams = _CircleWithParamsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, CvPoint, int, Scalar, int, int, int)>();

  ffi.Pointer<CvStatus> CircleWithParams_Async(
    Mat img,
    CvPoint center,
    int radius,
    Scalar color,
    int thickness,
    int lineType,
    int shift,
    imp1.CvCallback_0 callback,
  ) {
    return _CircleWithParams_Async(
      img,
      center,
      radius,
      color,
      thickness,
      lineType,
      shift,
      callback,
    );
  }

  late final _CircleWithParams_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, CvPoint, ffi.Int, Scalar, ffi.Int,
              ffi.Int, ffi.Int, imp1.CvCallback_0)>>('CircleWithParams_Async');
  late final _CircleWithParams_Async = _CircleWithParams_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, CvPoint, int, Scalar, int, int, int, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> Circle_Async(
    Mat img,
    CvPoint center,
    int radius,
    Scalar color,
    int thickness,
    imp1.CvCallback_0 callback,
  ) {
    return _Circle_Async(
      img,
      center,
      radius,
      color,
      thickness,
      callback,
    );
  }

  late final _Circle_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, CvPoint, ffi.Int, Scalar, ffi.Int,
              imp1.CvCallback_0)>>('Circle_Async');
  late final _Circle_Async = _Circle_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, CvPoint, int, Scalar, int, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> ClipLine(
    CvRect imgRect,
    CvPoint pt1,
    CvPoint pt2,
    ffi.Pointer<ffi.Bool> rval,
  ) {
    return _ClipLine(
      imgRect,
      pt1,
      pt2,
      rval,
    );
  }

  late final _ClipLinePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              CvRect, CvPoint, CvPoint, ffi.Pointer<ffi.Bool>)>>('ClipLine');
  late final _ClipLine = _ClipLinePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          CvRect, CvPoint, CvPoint, ffi.Pointer<ffi.Bool>)>();

  ffi.Pointer<CvStatus> ClipLine_Async(
    CvRect imgRect,
    CvPoint pt1,
    CvPoint pt2,
    imp1.CvCallback_1 callback,
  ) {
    return _ClipLine_Async(
      imgRect,
      pt1,
      pt2,
      callback,
    );
  }

  late final _ClipLine_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              CvRect, CvPoint, CvPoint, imp1.CvCallback_1)>>('ClipLine_Async');
  late final _ClipLine_Async = _ClipLine_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          CvRect, CvPoint, CvPoint, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> CompareHist(
    Mat hist1,
    Mat hist2,
    int method,
    ffi.Pointer<ffi.Double> rval,
  ) {
    return _CompareHist(
      hist1,
      hist2,
      method,
      rval,
    );
  }

  late final _CompareHistPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Int, ffi.Pointer<ffi.Double>)>>('CompareHist');
  late final _CompareHist = _CompareHistPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int, ffi.Pointer<ffi.Double>)>();

  ffi.Pointer<CvStatus> CompareHist_Async(
    Mat hist1,
    Mat hist2,
    int method,
    imp1.CvCallback_1 callback,
  ) {
    return _CompareHist_Async(
      hist1,
      hist2,
      method,
      callback,
    );
  }

  late final _CompareHist_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Int, imp1.CvCallback_1)>>('CompareHist_Async');
  late final _CompareHist_Async = _CompareHist_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> ConnectedComponents(
    Mat src,
    Mat dst,
    int connectivity,
    int ltype,
    int ccltype,
    ffi.Pointer<ffi.Int> rval,
  ) {
    return _ConnectedComponents(
      src,
      dst,
      connectivity,
      ltype,
      ccltype,
      rval,
    );
  }

  late final _ConnectedComponentsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Int>)>>('ConnectedComponents');
  late final _ConnectedComponents = _ConnectedComponentsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, int, int, int, ffi.Pointer<ffi.Int>)>();

  ffi.Pointer<CvStatus> ConnectedComponentsWithStats(
    Mat src,
    Mat labels,
    Mat stats,
    Mat centroids,
    int connectivity,
    int ltype,
    int ccltype,
    ffi.Pointer<ffi.Int> rval,
  ) {
    return _ConnectedComponentsWithStats(
      src,
      labels,
      stats,
      centroids,
      connectivity,
      ltype,
      ccltype,
      rval,
    );
  }

  late final _ConnectedComponentsWithStatsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, ffi.Int, ffi.Int,
              ffi.Int, ffi.Pointer<ffi.Int>)>>('ConnectedComponentsWithStats');
  late final _ConnectedComponentsWithStats =
      _ConnectedComponentsWithStatsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, Mat, int, int, int, ffi.Pointer<ffi.Int>)>();

  ffi.Pointer<CvStatus> ConnectedComponentsWithStats_Async(
    Mat src,
    int connectivity,
    int ltype,
    int ccltype,
    imp1.CvCallback_4 callback,
  ) {
    return _ConnectedComponentsWithStats_Async(
      src,
      connectivity,
      ltype,
      ccltype,
      callback,
    );
  }

  late final _ConnectedComponentsWithStats_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int,
              imp1.CvCallback_4)>>('ConnectedComponentsWithStats_Async');
  late final _ConnectedComponentsWithStats_Async =
      _ConnectedComponentsWithStats_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, int, int, int, imp1.CvCallback_4)>();

  ffi.Pointer<CvStatus> ConnectedComponents_Async(
    Mat src,
    int connectivity,
    int ltype,
    int ccltype,
    imp1.CvCallback_2 callback,
  ) {
    return _ConnectedComponents_Async(
      src,
      connectivity,
      ltype,
      ccltype,
      callback,
    );
  }

  late final _ConnectedComponents_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int,
              imp1.CvCallback_2)>>('ConnectedComponents_Async');
  late final _ConnectedComponents_Async =
      _ConnectedComponents_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, int, int, int, imp1.CvCallback_2)>();

  ffi.Pointer<CvStatus> ContourArea(
    VecPoint pts,
    ffi.Pointer<ffi.Double> rval,
  ) {
    return _ContourArea(
      pts,
      rval,
    );
  }

  late final _ContourAreaPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, ffi.Pointer<ffi.Double>)>>('ContourArea');
  late final _ContourArea = _ContourAreaPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<ffi.Double>)>();

  ffi.Pointer<CvStatus> ContourArea_Async(
    VecPoint pts,
    imp1.CvCallback_1 callback,
  ) {
    return _ContourArea_Async(
      pts,
      callback,
    );
  }

  late final _ContourArea_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, imp1.CvCallback_1)>>('ContourArea_Async');
  late final _ContourArea_Async = _ContourArea_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> ConvexHull(
    VecPoint points,
    Mat hull,
    bool clockwise,
    bool returnPoints,
  ) {
    return _ConvexHull(
      points,
      hull,
      clockwise,
      returnPoints,
    );
  }

  late final _ConvexHullPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, Mat, ffi.Bool, ffi.Bool)>>('ConvexHull');
  late final _ConvexHull = _ConvexHullPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, Mat, bool, bool)>();

  ffi.Pointer<CvStatus> ConvexHull_Async(
    VecPoint points,
    bool clockwise,
    bool returnPoints,
    imp1.CvCallback_1 callback,
  ) {
    return _ConvexHull_Async(
      points,
      clockwise,
      returnPoints,
      callback,
    );
  }
